fixd: logos visibility on load

--- a/public/styles/landing-page.css
+++ b/public/styles/landing-page.css
@@ -485,7 +485,7 @@ input::-moz-focus-inner {
   background-size: 90%;
   width:100%;
   height: 120px;
-  margin-top: -60px;
+  margin-top: -85px;
   margin-bottom: 30px;
 }
 @media handheld, screen and (max-width:640px){
